--- a/resources/main_view.ui
+++ b/resources/main_view.ui
@@ -36,6 +36,19 @@
       <height>861</height>
      </rect>
     </property>
+    <widget class="QLabel" name="main_viewer">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>651</width>
+       <height>861</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menu_bar">
