--- a/resources/main_view.ui
+++ b/resources/main_view.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>904</width>
-    <height>905</height>
+    <width>1113</width>
+    <height>897</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,7 +32,7 @@
      <rect>
       <x>250</x>
       <y>0</y>
-      <width>651</width>
+      <width>861</width>
       <height>861</height>
      </rect>
     </property>
@@ -41,12 +41,15 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>651</width>
-       <height>861</height>
+       <width>861</width>
+       <height>851</height>
       </rect>
      </property>
      <property name="text">
       <string>TextLabel</string>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
@@ -56,7 +59,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>904</width>
+     <width>1113</width>
      <height>21</height>
     </rect>
    </property>
