--- a/resources/settings_cloud_account_dialog.ui
+++ b/resources/settings_cloud_account_dialog.ui
@@ -25,6 +25,9 @@
    <layout class="QGridLayout" name="gridLayout">
     <item row="3" column="1">
      <widget class="QTextEdit" name="container_name_textedit_1">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -36,11 +39,20 @@
         <width>16777215</width>
         <height>25</height>
        </size>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QTextEdit" name="account_name_textedit_1">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -52,6 +64,15 @@
         <width>16777215</width>
         <height>25</height>
        </size>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="readOnly">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -78,6 +99,9 @@
     </item>
     <item row="2" column="1">
      <widget class="QTextEdit" name="connection_str_textedit_1">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -90,6 +114,12 @@
         <height>25</height>
        </size>
       </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
      </widget>
     </item>
     <item row="0" column="0" colspan="2">
@@ -99,6 +129,13 @@
         <widget class="QLabel" name="label1">
          <property name="text">
           <string>Account 1</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="edit_pushButton_1">
+         <property name="text">
+          <string>Edit</string>
          </property>
         </widget>
        </item>
