--- a/resources/main_view.ui
+++ b/resources/main_view.ui
@@ -6,60 +6,74 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1113</width>
-    <height>897</height>
+    <width>1726</width>
+    <height>890</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="central_widget">
-   <widget class="QTreeView" name="side_bar">
-    <property name="geometry">
-     <rect>
-      <x>-5</x>
-      <y>1</y>
-      <width>251</width>
-      <height>861</height>
-     </rect>
-    </property>
-    <property name="animated">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QWidget" name="widget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>0</y>
-      <width>861</width>
-      <height>861</height>
-     </rect>
-    </property>
-    <widget class="QLabel" name="main_viewer">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>861</width>
-       <height>851</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="scaledContents">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </widget>
+  <widget class="QWidget" name="main_widget">
+   <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <item>
+     <widget class="QTreeView" name="side_bar">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>200</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>400</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="baseSize">
+       <size>
+        <width>200</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::EditKeyPressed</set>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QScrollArea" name="scrollArea">
+      <property name="widgetResizable">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="scrollAreaWidgetContents_2">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>1444</width>
+         <height>829</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menu_bar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1113</width>
+     <width>1726</width>
      <height>21</height>
     </rect>
    </property>
@@ -69,6 +83,8 @@
     </property>
     <addaction name="action_menu_file_open"/>
     <addaction name="action_menu_file_save"/>
+    <addaction name="separator"/>
+    <addaction name="action_menu_file_upload"/>
    </widget>
    <widget class="QMenu" name="menu_view">
     <property name="title">
@@ -127,6 +143,11 @@
   <action name="action_menu_settings_account">
    <property name="text">
     <string>account</string>
+   </property>
+  </action>
+  <action name="action_menu_file_upload">
+   <property name="text">
+    <string>Upload</string>
    </property>
   </action>
  </widget>
