--- a/resources/file_upload_dialog.ui
+++ b/resources/file_upload_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>750</width>
-    <height>131</height>
+    <height>132</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,15 +21,8 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Local directory</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QTextEdit" name="textEdit">
+   <item row="1" column="1">
+    <widget class="QTextEdit" name="textEdit_2">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -45,8 +38,29 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QTextEdit" name="textEdit_2">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Local directory</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="3">
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="text">
+      <string>Upload</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QProgressBar" name="progressBar">
+     <property name="value">
+      <number>24</number>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QTextEdit" name="textEdit">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -55,10 +69,10 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QPushButton" name="pushButton_2">
+   <item row="3" column="3">
+    <widget class="QPushButton" name="pushButton_3">
      <property name="text">
-      <string>upload</string>
+      <string>Cancel</string>
      </property>
     </widget>
    </item>
